# nlp-lectures

./: pyproject.toml
presentations/: 1-wprowadzenie-do-PJN.ipynb  10-llms.ipynb  2-tokenizacja-lematyzacja.ipynb  3-tagowanie.ipynb  4-znaczenie.ipynb  5-klasyfikacja.ipynb  5-zadania-w-nlp.ipynb  6-wyszukiwanie.ipynb  7-sieci-neuronowe.ipynb  8-qa.ipynb  9-seq-2-seq.ipynb  rise.css
